# MQTT-Sensor-Manager

./: .gitmodules  CMakeLists.txt  README.md  install.sh  test.sh
Manager/: CMakeLists.txt  main.cpp  main_old.cpp
Manager/Units/: ApplicationUnits.h  EventLoop.h  MQTT.cpp  MQTT.h  Mqtt.h  README.md
Manager/Units/Interfaces/: CameraInterface.h  TransportInterface.h
Manager/test/: CMakeLists.txt  test_main.cpp
Manager/test/mock/: MockEventLoop.h
manager/: CMakeLists.txt  main.cpp
manager/Units/: ApplicationUnits.h  CameraInterface.h  EventLoop.h  EventLoopInterface.h  Mqtt.h  StdThreadProvider.h  UnitInterface.h
manager/Units/Interfaces/: EventLoopInterface.h  README.md  ThreadInterface.h
manager/test/: CMakeLists.txt  TestEventLoop.cpp
manager/test/mock/: MockEventLoop.h
